# libcg

./: .clang-format  .gitignore  .syntastic_cpp_config  .vimrc  CMakeLists.txt  LICENSE  README.md  cmake-clean
Obj3D/: Helpers.cpp  Helpers.h  Matrices.h  Mesh3D.cpp  Mesh3D.h  Model.cpp  Model.h  Model3DS.cpp  Model3DS.h  ModelObj.cpp  ModelObj.h  NormalArray.cpp  NormalArray.h  Obj3D.cpp  Obj3D.h  Paths.h  Renderable.cpp  Renderable.h  TheMatrix.cpp  TheMatrix.h  UVArray.cpp  UVArray.h  VertexArray.cpp  VertexArray.h  objloader.cpp  objloader.hpp  vboindexer.cpp  vboindexer.hpp
cg/ger/: Helpers.cpp  Matrices.hpp  Model.hpp  Model3DS.cpp  Model3DS.hpp  Paths.hpp  Renderable.hpp  TheMatrix.cpp  vboindexer.hpp
cg/io/: glm_ostream.hpp
cg/new/: Helpers.cpp  Helpers.hpp  Matrices.hpp  Mesh3D.cpp  Mesh3D.hpp  Model.cpp  Model.hpp  Model3DS.cpp  Model3DS.hpp  ModelObj.cpp  ModelObj.hpp  Obj3D.cpp  Obj3D.hpp  Renderable.cpp  Renderable.hpp  TheMatrix.cpp  TheMatrix.hpp  objloader.cpp  objloader.hpp  vboindexer.cpp  vboindexer.hpp
cg/oogl/: DisplayList.cpp  DisplayList.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  GLSLProgram.cpp  GLSLProgram.hpp  GLSLShader.cpp  GLSLShader.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  Navigator.cpp  Navigator.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Texture3D.cpp  Texture3D.hpp  glIncludes.hpp  gl_error.cpp  gl_error.hpp  glfwIncludes.hpp  glutIncludes.hpp  timer.cpp  timer.hpp
cg/oogl/model/: Model3ds.cpp  Model3ds.hpp  ModelMX.cpp  ModelMX.hpp  ModelObj.cpp  ModelObj.hpp
cg/util/: log.hpp  math.hpp  timer.cpp  timer.hpp
cgutil/: log.hpp  loglevels.hpp  math.hpp  timer.cpp  timer.hpp
cmake/: config.inc  generateconfig.cmake  grabgitversion.cmake
cmake/modules/: FindCG.cmake  FindGLM.cmake  FindGlm.cmake  FindLib3ds.cmake  libcg-config.cmake.in
game/: playground.cpp
glm/: glm_ostream.hpp
include/: files.cmake
include/cg/io/: glm_ostream.hpp
include/cg/oogl/: DisplayList.hpp  FrameBufferObject.hpp  GLSLProgram.hpp  GLSLShader.hpp  Image.hpp  Model.hpp  Texture.hpp  Texture2D.hpp  glIncludes.hpp  gl_error.hpp  glfwIncludes.hpp  timer.hpp
include/cg/oogl/model/: ModelMX.hpp  ModelObj.hpp
include/cg/util/: config.hpp  log.hpp  loglevels.hpp  math.hpp  timer.hpp
oogl/: DisplayList.cpp  DisplayList.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  GLSLProgram.cpp  GLSLProgram.hpp  GLSLShader.cpp  GLSLShader.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  Navigator.cpp  Navigator.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Texture3D.cpp  Texture3D.hpp  glIncludes.hpp  gl_error.cpp  gl_error.hpp  glfwIncludes.hpp  glutIncludes.hpp  timer.cpp  timer.hpp
oogl/model/: Model3ds.cpp  Model3ds.hpp  ModelMX.cpp  ModelMX.hpp  ModelObj.cpp  ModelObj.hpp
src/: files.cmake
src/cg/oogl/: DisplayList.cpp  FrameBufferObject.cpp  GLSLProgram.cpp  GLSLShader.cpp  Image.cpp  Model.cpp  Texture2D.cpp  gl_error.cpp  timer.cpp
src/cg/oogl/model/: Model3ds.cpp  ModelObj.cpp
src/cg/util/: math.cpp
